tests/valid/Assume_Valid_2.whiley
import whiley.lang.*

method main(System.Console console) -> void:
    assert 1 == 1

