tests/invalid/Void_Invalid_3.whiley
method method() :
    b = 1

method main() :
    a = method()
